# SimpleNetworking

./: .gitignore  CMakeLists.txt  README.md
SimpleNetworking/include/: ISocket.h  SerialPort.h  TCPPort.h  TCPSocket.h  UDPSocket.h
SimpleNetworking/src/: SocketTests.cpp
